--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "gapi-script": "^1.2.0",
     "jspdf": "^2.5.2",
     "pdfmake": "^0.2.12",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
