--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ VITE_AUTH0_DOMAIN=dev-4pzbg6gfy3a7n16n.us.auth0.com
 VITE_AUTH0_CLIENT_ID=ndvr8P3Tzl2xKj4rKcJbrZtt8SuC4d6E
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
 
-VITE_UPLOADER_MCCD=http://localhost:3000/upload
+VITE_UPLOADER_MCCD=https://google-drive-uploader-mccd-drab.vercel.app/upload
 VITE_FOLDER_ID=10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx
