--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.5.0",
+    "sweetalert2": "^11.18.0",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
