--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-VITE_AUTH0_DOMAIN=dev-4pzbg6gfy3a7n16n.us.auth0.com
-VITE_AUTH0_CLIENT_ID=ndvr8P3Tzl2xKj4rKcJbrZtt8SuC4d6E
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173
-
-VITE_UPLOADER_MCCD=https://google-drive-uploader-mccd-drab.vercel.app/upload
-VITE_FOLDER_ID=10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx
+VITE_UPLOADER_MCCD="https://google-drive-uploader-mccd-drab.vercel.app/upload"
+VITE_FOLDER_ID="10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx"
+VITE_CLIENT_ID="719483889158-ld3q8vsru8vhmvpko6j595686t0fs2b5.apps.googleusercontent.com"
+VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
+VITE_APPSCRIPT="https://script.google.com/macros/s/AKfycbwjs-05q6ErkXDeKEbGlE7NyJEWLfDpnbEq-KySj4yUq2Y2RlBTNOsk9QokqOto-fNZdg/exec"
