--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VITE_UPLOADER_MCCD="https://google-drive-uploader-mccd-drab.vercel.app/upload"
 VITE_FOLDER_ID="10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx"
 VITE_CLIENT_ID="719483889158-ld3q8vsru8vhmvpko6j595686t0fs2b5.apps.googleusercontent.com"
 VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
-VITE_APPSCRIPT="https://script.google.com/macros/s/AKfycbwjs-05q6ErkXDeKEbGlE7NyJEWLfDpnbEq-KySj4yUq2Y2RlBTNOsk9QokqOto-fNZdg/exec"
+VITE_APPSCRIPT="https://backend-google-sheets-hbq9n2kqp-tomassaldana966s-projects.vercel.app/api/sendToSheets"
