--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_UPLOADER_MCCD="https://google-drive-uploader-mccd-drab.vercel.app/upload"
-VITE_FOLDER_ID="10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx"
-VITE_CLIENT_ID="719483889158-ld3q8vsru8vhmvpko6j595686t0fs2b5.apps.googleusercontent.com"
-VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
-VITE_APPSCRIPT_BACKUP="backend-google-sheets.vercel.app/api/sendToSheets"
-VITE_BACKEND_APPSCRIPT="http://localhost:3000/api/sendToSheets"
+VITE_UPLOADER_MCCD="INVALID-https://google-drive-uploader-mccd-drab.vercel.app/upload"
+VITE_FOLDER_ID="INVALID-10E9AijSEz2JoC0rPjkizG1zdiQRhn0wx"
+VITE_CLIENT_ID="INVALID-719483889158-ld3q8vsru8vhmvpko6j595686t0fs2b5.apps.googleusercontent.com"
+VITE_SCOPES="INVALID-https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
+VITE_APPSCRIPT_BACKUP="INVALID-backend-google-sheets.vercel.app/api/sendToSheets"
+VITE_BACKEND_APPSCRIPT="INVALID-http://localhost:3000/api/sendToSheets"
