--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "gapi-script": "^1.2.0",
+    "install": "^0.13.0",
     "jspdf": "^3.0.1",
+    "npm": "^11.4.2",
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.12",
     "postcss": "^8.4.41",
@@ -20,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.2",
     "sweetalert2": "^11.18.0",
     "tailwindcss": "^3.4.10"
   },
