--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-VITE_UPLOADER_MCCD="google-drive-uploader-mccd-dpto-muj.vercel.app
+VITE_UPLOADER_MCCD="https://google-drive-uploader-mccd-dpto-muj.vercel.app
 /upload"
 VITE_FOLDER_ID="1j5udjenJ2j7GMfyL6w__toac-70mrJAo"
-VITE_CLIENT_ID="719483889158-ld3q8vsru8vhmvpko6j595686t0fs2b5.apps.googleusercontent.com"
+VITE_CLIENT_ID="211156048878-akakf7iuq51479uldmuuv1qcb3sg6k1l.apps.googleusercontent.com"
 VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
-VITE_APPSCRIPT_BACKUP="google-drive-uploader-mccd-dpto-muj.vercel.app
+VITE_APPSCRIPT_BACKUP="https://google-drive-uploader-mccd-dpto-muj.vercel.app
 /sendToSheets"
-VITE_BACKEND_APPSCRIPT="google-drive-uploader-mccd-dpto-muj.vercel.app
+VITE_BACKEND_APPSCRIPT="https://google-drive-uploader-mccd-dpto-muj.vercel.app
 /sendToSheets"
