--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "gapi-script": "^1.2.0",
     "install": "^0.13.0",
     "jspdf": "^3.0.1",
@@ -33,6 +34,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "antd": "^5.27.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
