--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 VITE_UPLOADER_MCCD="http://localhost:3000/upload"
 #"https://google-drive-uploader-mccd-dpto-muj.vercel.app/upload"
 VITE_FOLDER_ID="1j5udjenJ2j7GMfyL6w__toac-70mrJAo"
-VITE_CLIENT_ID="211156048878-akakf7iuq51479uldmuuv1qcb3sg6k1l.apps.googleusercontent.com"
-VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
+#VITE_CLIENT_ID="211156048878-akakf7iuq51479uldmuuv1qcb3sg6k1l.apps.googleusercontent.com"
+#VITE_SCOPES="https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/documents"
 VITE_APPSCRIPT_BACKUP="https://google-drive-uploader-mccd-dpto-muj.vercel.app
 /sendToSheets"
 VITE_BACKEND_APPSCRIPT="http://localhost:3000/sendToSheets"
